# cuad-reinforcement-learning

./: .env.example  .gitignore  README.md  pyproject.toml  run_training_job.py
cuad_qa/: contract_search_tools.py  project_configs.py  requirements.txt  rollout.py  train.py
cuad_qa/.cursor/: no-defensive-programming.mdc
cuad_qa/data/: convert_cuad_dataset.py  cuad_contracts.db  generate_cuad_scenarios.py  local_contract_db.py  query_iterators.py
cuad_qa/evaluate/: benchmark.py
cuad_qa/raw_data/: processed_CUADv1.json
